# PyScrappy

./: LICENSE  PyScrappy.py  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/: PyScrappy.py  alibaba.py  amazon.py  flipkart.py  image.py  imdb.py  instagram.py  linkedin.py  news.py  snapdeal.py  soundcloud.py  spotify.py  stock.py  swiggy.py  twitter.py  wikipedia.py  youtube.py  zomato.py
src/PyScrappy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
