[metadata]
name = PyScrappy
version = 0.0.7
author = Vedant Tibrewal, Vedaant Singh
author_email = mlds93363@gmail.com
description = This package is made for automatic web scraping to make the whole process of scraping easy and simple.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mldsveda/PyScrappy
project_urls =
    Bug Tracker = https://github.com/mldsveda/PyScrappy/issues
keywords=Scrapping, Flipkart, Snapdeal, Wikipedia, Image Scrapper, YouTube, Scrapy, PyScrappy, Instagram, Alibaba,Web Scraping, News, Stocks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
py_modules=PyScrappy, alibaba, flipkart, image, instagram, snapdeal, wikipedia, youtube, news, stock
install_requires=
        selenium;
        webdriver-manager;
        beautifulsoup4;
        requests;
        pandas;
[options.packages.find]
where = src